Java 11 support (main -> ce/main)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 78265]